--- a/theme/partials/awards.hbs
+++ b/theme/partials/awards.hbs
@@ -1,38 +1,38 @@
 {{#if resume.awards.length}}
-  <section class="section">
+  <section class='section'>
     <header>
-      <h2 class="section-title">Awards</h2>
+      <h2 class='section-title'>Awards</h2>
     </header>
-    <section id="awards">
+    <section id='awards'>
       {{#each resume.awards}}
-        <section class="award-item">
+        <section class='award-item'>
           {{#if summary}}
-            <label for="award-item-{{@index}}"></label>
+            <label for='award-item-{{@index}}'></label>
           {{/if}}
 
-          <header class="clear">
+          <header class='clear'>
             {{#if date}}
-              <div class="date">
+              <div class='date'>
                 {{Y date}}
               </div>
             {{/if}}
-            <div class="header-left">
+            <div class='header-left'>
               {{#if title}}
-                <div class="title">
+                <div class='title'>
                   {{title}}
                 </div>
               {{/if}}
               {{#if awarder}}
-                <div class="awarder">
+                <div class='awarder'>
                   {{awarder}}
                 </div>
               {{/if}}
             </div>
           </header>
 
-          <div class="item">
+          <div class='item'>
             {{#if summary}}
-              <div class="summary">{{paragraphSplit summary}}</div>
+              <div class='summary'>{{paragraphSplit summary}}</div>
             {{/if}}
           </div>
         </section>
