--- a/theme/partials/certificates.hbs
+++ b/theme/partials/certificates.hbs
@@ -1,36 +1,36 @@
 {{#if resume.certificates.length}}
-  <section class="section">
+  <section class='section'>
     <header>
-      <h2 class="section-title">Certificates</h2>
+      <h2 class='section-title'>Certificates</h2>
     </header>
-    <section id="certificates">
+    <section id='certificates'>
       {{#each resume.certificates}}
-        <section class="certificate-item">
-          <header class="clear">
+        <section class='certificate-item'>
+          <header class='clear'>
             {{#if date}}
-              <div class="date">
+              <div class='date'>
                 {{date}}
               </div>
             {{/if}}
-            <div class="header-left">
+            <div class='header-left'>
               {{#if name}}
-                <div class="name">
+                <div class='name'>
                   {{name}}
                 </div>
               {{/if}}
               {{#if issuer}}
-                <div class="issuer">
+                <div class='issuer'>
                   {{issuer}}
                 </div>
               {{/if}}
             </div>
           </header>
 
-          <div class="item">
+          <div class='item'>
             {{#if url}}
-              <span class="url">
-                <span class="fas fa-external-link-alt"></span>
-                <a target="_blank" href="{{url}}">{{url}}</a>
+              <span class='url'>
+                <span class='fas fa-external-link-alt'></span>
+                <a target='_blank' href='{{url}}'>{{url}}</a>
               </span>
             {{/if}}
           </div>
