--- a/theme/partials/basics.hbs
+++ b/theme/partials/basics.hbs
@@ -36,15 +36,15 @@
     {{#birthDate birth}}{{/birthDate}}
 
     <div id='contact'>
-      {{#if website}}
+      {{#if url}}
         <div class='website'>
           <span class='fas fa-external-link-alt'></span>
           <a
             class='hide-href-print'
             target='_blank'
             target='_blank'
-            href='{{website}}'
-          >{{website}}</a>
+            href='{{url}}'
+          >{{url}}</a>
         </div>
       {{/if}}
       {{#if email}}
